# ecs-showcase

./: .gitignore  goals.md  readme.md
bevy-example/: Cargo.toml  caching.md  readme.md
bevy-example/src/: bevy.rs  ecs.rs  ecs_engine.rs  helpers.rs  main.rs  my_ecs.rs  procedural.rs  soa.rs  timer.rs
bevy-example/src/soa/: simd.rs
cranelift-playground/: Cargo.toml
cranelift-playground/src/: code_gen.rs  ir_gen.rs  jit_bldr.rs  jit_runner.rs  lang  main.rs  native_bldr.rs
engine-playground/: Cargo.toml
engine-playground/src/: bitset.rs  lib.rs
lang/: main
lang_ir/: Cargo.toml
lang_ir/src/: ast.rs
parser-playground/: Cargo.toml  readme.md
parser-playground/src/: chumsky.rs  main.rs  ruparse.rs
ruparse-playground/: Cargo.toml
ruparse-playground/src/: grammar.rs  ir.rs  lang  lang.ecs  lib.rs  main.rs  ruparse_lowering.rs
ruparse_highlight/: Cargo.toml  test.html
ruparse_highlight/src/: html.rs  lsp.rs  main.rs
zig-engine/: build.zig  build.zig.zon
zig-engine/src/: main.zig  root.zig  slab.zig
