[package]
name = "bevy-example"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { version = "0.17.3", features = [] }
# bevy_ecs = { version = "0.17.3", features = ["multi_threaded"] }
rand = "0.9.2"
engine-playground = { path = "../engine-playground" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
