[package]
name = "ruparse_highlight"
version = "0.1.0"
edition = "2024"

[dependencies]
line-index = "0.1.2"
ruparse-playground = { path = "../ruparse-playground" }
lang_ir = { path = "../lang_ir" }
ruparse = { path = "../../mylibs/ruparse" }
tower-lsp = "0.20.0"
tokio = { version = "1.50.0", features = ["full"] }
dashmap = "6.1.0"
